--- a/client/src/styles/Signup.css
+++ b/client/src/styles/Signup.css
@@ -125,4 +125,10 @@
   .signup-container .checkbox-group input {
     margin-right: 10px;
   }
+
+  .error-text {
+    color: red;
+    font-family: 'Varela Text', sans-serif;
+    font-size: 0.9rem;
+  }
   
